fixed feature alignment

--- a/styles.css
+++ b/styles.css
@@ -204,8 +204,7 @@ header{
     font-size: 1.6rem;
     font-weight: 700;
     max-width: 50rem;
-    padding: 16px 0;
-    margin: 0 auto; 
+    padding: 16px 0; 
 }
 .join-now{
     color: #FFF;
